--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "postcss": "8.4.6",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-preset-env": "7.3.3",
     "prettier-plugin-tailwindcss": "0.1.7",
     "tailwindcss": "3.0.22",
     "typescript": "4.5.5"
