--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "classnames": "2.3.1",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "6.2.1",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@types/uuid": "8.3.4",
