--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aaaaaaaaaaaaaaaaaaw",
+  "name": "nwordle",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,25 +8,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/dynamodb-adapter": "1.1.0",
     "classnames": "2.3.1",
-    "next": "^12.1.0",
+    "next": "12.1.0",
+    "next-auth": "4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "8.3.2"
   },
   "devDependencies": {
     "@svgr/webpack": "6.2.1",
-    "@types/node": "17.0.17",
+    "@types/next-auth": "3.15.0",
+    "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/uuid": "8.3.4",
     "autoprefixer": "10.4.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
-    "postcss": "8.4.6",
+    "eslint-config-next": "12.1.0",
+    "postcss": "8.4.7",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-preset-env": "7.3.3",
-    "prettier-plugin-tailwindcss": "0.1.7",
-    "tailwindcss": "3.0.22",
+    "postcss-preset-env": "7.4.1",
+    "prettier-plugin-tailwindcss": "0.1.8",
+    "tailwindcss": "3.0.23",
     "typescript": "4.5.5"
   }
 }
