--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "6.2.1",
+    "@types/next": "9.0.0",
     "@types/next-auth": "3.15.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
