--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@next-auth/dynamodb-adapter": "1.1.0",
+    "aws-amplify": "4.3.14",
     "classnames": "2.3.1",
+    "graphql-tag": "2.12.6",
     "next": "11.1.4",
     "next-auth": "4.2.1",
     "react": "17.0.2",
