--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@next-auth/dynamodb-adapter": "1.1.0",
     "aws-amplify": "4.3.14",
     "classnames": "2.3.1",
+    "graphql": "16.3.0",
     "graphql-tag": "2.12.6",
     "next": "11.1.4",
     "next-auth": "4.2.1",
