--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "3.5.9",
+    "@apollo/react-hooks": "4.0.0",
     "@next-auth/dynamodb-adapter": "1.1.0",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
+    "apollo-link-http": "1.5.17",
+    "aws-appsync": "4.1.4",
+    "aws-appsync-auth-link": "3.0.7",
     "classnames": "2.3.1",
     "graphql-tag": "2.12.6",
     "next": "11.1.4",
     "next-auth": "4.2.1",
+    "node-fetch": "3.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "8.3.2"
